# SolarSystem

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: VAO.h  VBO.h  camera.h  gravitySystem.h  planetClass.h  shaderClass.h  starClass.h
include/glad/: glad.h
shaders/: default.frag  default.vert
src/: camera.cpp  glad.c  gravitySystem.cpp  main.cpp  planetClass.cpp  shaderClass.cpp  starClass.cpp
